app-test/testdata/typesystem/neg/pattern-matching-analysis-exhaustivity-tuple/check/patmat.check
testdata/typesystem/neg/pattern-matching-analysis-exhaustivity-tuple/src/patmat.cal:6:18: error: case may not be exhaustive.
It would fail on pattern: (_, true)
            case t of
                 ^